discussion/kv_engine/155194/155194_rev21_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Use the global executor from the core

Move the tasks over to use the global executor

Change-Id: I33cd997a2a79544ab799af9321ca4a8cb208c711

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-11 08:09:29.000000000
Message: 
Uploaded patch set 21: Patch Set 20 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 08:53:48.000000000
Message: 
Patch Set 21: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9763/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/stats.def.h:131:10: error: "stats_config.def.h" file not found [clang-diagnostic-error]
#include "stats_config.def.h" // NOLINT(*)
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9763/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9763/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8358/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36726/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/283/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31393/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19345/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10411/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11764/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11338/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11486/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-11 14:43:15.000000000
Message: 
Patch Set 21: Verified+1

clang-tidy don't like the tasks.def.h file
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-11 14:43:19.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-11 15:23:46.000000000
Message: 
Patch Set 21: Code-Review-1

(8 comments)
Line:21, daemon/function_task.h -> Perhaps rename to something like "RunOnceTask" which more describes what it does, as opposed to the implementation details?

Line:39, daemon/function_task.h -> Note we'll get warnings printed if the function takes longer than this. Might make sense to have this passed in the ctor so the caller has to think about a sensible value.

Line:20, daemon/protocol/mcbp/create_remove_bucket_command_context.cc -> Seems like you could just use the FunctionTask (OneShotTask) helper here right - it's a one-shot task which could capture it's state in a std::function lambda?

Line:21, daemon/protocol/mcbp/rbac_reload_command_context.cc -> Same here?

Line:22, daemon/protocol/mcbp/sasl_refresh_command_context.cc -> ditto?

Line:41, executor/tasks.def.h -> Wondering if we want to distinguish the Global (NoBucket) tasks from the per-bucket ones somehow... Not quite sure the best way, maybe just give them a certain prefix ("Mc" ?)

Line:56, executor/tasks.def.h -> Do these actually perform any disk IO directly - or is it just that the underlying engine _might_ do IO?

Might be more correct to put them on NonIO if they are just CPU-bound (say if creating a ephemeral or memcached bucket).

Line:57, executor/tasks.def.h -> Also, if these are highest priority (0) please keep the list ordered.

----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-11 17:18:40.000000000
MISMATCHED INLINE COMMENT
Line:21, daemon/function_task.h -> Done
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-11 17:18:40.000000000
MISMATCHED INLINE COMMENT
Line:39, daemon/function_task.h -> Done
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-11 17:18:40.000000000
MISMATCHED INLINE COMMENT
Line:20, daemon/protocol/mcbp/create_remove_bucket_command_context.cc -> Yes.. THis class "predates" the FunctionTask (when I figured that there was so much boilerplate code)
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-11 17:18:40.000000000
MISMATCHED INLINE COMMENT
Line:21, daemon/protocol/mcbp/rbac_reload_command_context.cc -> Done
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-11 17:18:40.000000000
MISMATCHED INLINE COMMENT
Line:22, daemon/protocol/mcbp/sasl_refresh_command_context.cc -> Done
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-11 17:18:40.000000000
MISMATCHED INLINE COMMENT
Line:41, executor/tasks.def.h -> Done
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-11 17:18:40.000000000
MISMATCHED INLINE COMMENT
Line:56, executor/tasks.def.h -> Done
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-11 17:18:40.000000000
MISMATCHED INLINE COMMENT
Line:57, executor/tasks.def.h -> Done
----------------------------------------------------------------------------------------------------------------------
